fix the margin-bottom in the first sidebar li on mobile display

--- a/src/client/src/tsx/components/layoutComponents/SideBar/SideBar.module.scss
+++ b/src/client/src/tsx/components/layoutComponents/SideBar/SideBar.module.scss
@@ -6,11 +6,9 @@
   ul {
     margin-top: 1.5rem;
     li:first-child {
-      &:has(span[class*="welcome"]) {
-        margin-bottom: 1rem;
-        a {
-          justify-content: center;
-        }
+      margin-bottom: 1rem;
+      a {
+        justify-content: center;
       }
     }
     li:nth-child(2) {
